fix overflow caused by images

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 nav {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   position: sticky;
   padding: 10px;
@@ -26,7 +27,7 @@ a {
 .shop {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
+  gap: 20px 10px;
   align-items: center;
   text-align: center;
   width: 95%;
@@ -34,16 +35,25 @@ a {
 }
 
 .shop > a > img {
-  width: 150px;
+  width: 40vw;
 }
 
 .product {
   width: 75%;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.product > h1 {
+  font-size: 1.5rem;
 }
 
 .product > img {
   width: 100%;
+  max-width: 250px;
 }
 
 .shopping-cart {
